# 60-days-of-solana

./: .gitignore  README.md  test.py
crowdfund/: Anchor.toml
crowdfund/tests/: crowdfund.ts
day1/: Anchor.toml
day10/: Anchor.toml
day10/tests/: day10.ts
day11/: Anchor.toml
day11/tests/: day11.ts
day12/: Anchor.toml
day12/tests/: day12.ts
day13/: Anchor.toml
day13/tests/: day13.ts
day14/: Anchor.toml
day14/programs/day14/: Cargo.toml
day14/programs/day14/src/: lib.rs
day14/tests/: day14.ts
day15/: Anchor.toml
day15/tests/: day15.ts
day16/: Anchor.toml
day16/tests/: day16.ts
day17/: Anchor.toml
day17/tests/: day17.ts
day18/: Anchor.toml
day18/tests/: day18.ts
day19/: Anchor.toml
day19/tests/: day19.ts
day2/: Anchor.toml  Cargo.toml
day2/tests/: day2.ts
day20/: Anchor.toml
day20/tests/: day20.ts
day21/: Anchor.toml
day21/tests/: day21.ts
day22/: summary.md
day23/: Anchor.toml
day23/tests/: day23.ts
day24/: Anchor.toml
day24/tests/: day24.ts
day25/: Anchor.toml
day25/tests/: day25.ts
day26/: Anchor.toml
day26/tests/: day26.ts
day27/: Anchor.toml
day27/programs/day27/: Cargo.toml
day27/programs/day27/src/: lib.rs
day27/tests/: day27.ts
day28/: Anchor.toml
day28/tests/: day28.ts
day29/: base_58.py  base_58.ts  owner-authority.md
day3/: Anchor.toml
day30/: Anchor.toml
day31/: Anchor.toml
day4/: Anchor.toml
day5/: Anchor.toml
day6/: Anchor.toml
day7/: Anchor.toml
day8/: Anchor.toml
day9/: Cargo.toml
hello_macro_usage/: Cargo.toml
other_program/: Anchor.toml
(+78 files in other folders)
